fix overflow-x

--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ li {
 }
 
 /* base styles */
+html {
+	overflow-x: hidden;
+}
 body {
 	background: var(--secondary);
 	overflow-x: hidden;
